# tauri-plugin-minecraft-essentials

./: .npmrc  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  package.json
.github/workflows/: publish.yml
examples/tauri-app/: package.json  svelte.config.js
examples/tauri-app/components/: Sidebar.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  lib.rs
