[package]
name = "tauri-plugin-minecraft-essentails"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-minecraft-essentails"

[dependencies]
tauri = { version = "2.2.4" }
serde = "1.0"
thiserror = "2"
minecraft-essentials = {git = "https://github.com/minecraft-essentials/minecraft-essentials", branch = "0.2.12"}

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
